--- a/ML_internship_Project.ipynb
+++ b/ML_internship_Project.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ML internship Project.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOfxjmcxPiGsmRQ9heX7e/T",
+      "authorship_tag": "ABX9TyNsa2PeDX/4D0BbYeog8uyq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
         "import sklearn\n",
         "from scipy import stats"
       ],
-      "execution_count": 65,
+      "execution_count": 113,
       "outputs": []
     },
     {
@@ -53,7 +53,7 @@
         "#reading the csv file\n",
         "car_data = pd.read_csv('data.csv')  "
       ],
-      "execution_count": 66,
+      "execution_count": 114,
       "outputs": []
     },
     {
@@ -65,12 +65,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 313
         },
-        "outputId": "af1f831f-f277-4a81-b1b4-843df556dc14"
+        "outputId": "36ab2265-ea44-4238-824d-daf9f6e9a4e5"
       },
       "source": [
         "car_data.head()"
       ],
-      "execution_count": 67,
+      "execution_count": 115,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -226,7 +226,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 67
+          "execution_count": 115
         }
       ]
     },
@@ -239,13 +239,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 302
         },
-        "outputId": "489ae9d5-55ac-40f9-f468-e7803955a0fd"
+        "outputId": "2dd1f722-9185-44a6-cc76-a1ef816f6792"
       },
       "source": [
         "#reading data in Python\n",
         "car_data.dtypes"
       ],
-      "execution_count": 68,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -273,7 +273,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 68
+          "execution_count": 116
         }
       ]
     },
@@ -286,24 +286,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "e6979306-e863-4c82-b5a3-a415ab81acb4"
+        "outputId": "a7a26040-8b8b-44f0-ebdc-a6dd73a989f2"
       },
       "source": [
         "car_data.shape"
       ],
-      "execution_count": 83,
+      "execution_count": 117,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(7735, 16)"
+              "(11914, 16)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 83
+          "execution_count": 117
         }
       ]
     },
@@ -316,12 +316,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 252
         },
-        "outputId": "d48105d8-23aa-41b4-b677-659cd56dc886"
+        "outputId": "700ce50c-8846-4894-df17-a481337d9a9d"
       },
       "source": [
         "car_data.describe"
       ],
-      "execution_count": 70,
+      "execution_count": 118,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -346,7 +346,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 70
+          "execution_count": 118
         }
       ]
     },
@@ -359,12 +359,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 302
         },
-        "outputId": "4a0d25d8-19ab-4468-ccda-80b093c37f47"
+        "outputId": "65f5c048-4a7c-481e-8e98-3e73e7842e77"
       },
       "source": [
         "car_data.isnull().sum()\n"
       ],
-      "execution_count": 71,
+      "execution_count": 119,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -392,7 +392,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 71
+          "execution_count": 119
         }
       ]
     },
@@ -405,12 +405,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 252
         },
-        "outputId": "33c08c61-af72-410f-ce06-0e581c4e7a92"
+        "outputId": "3bb56b52-05c7-4fff-d94f-c7ba8cc8d74f"
       },
       "source": [
         "car_data.info"
       ],
-      "execution_count": 72,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -435,7 +435,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 72
+          "execution_count": 120
         }
       ]
     },
@@ -448,12 +448,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 101
         },
-        "outputId": "0c7a7fd9-b9e8-4462-8398-2f504a777e2e"
+        "outputId": "ac42e45f-d371-4ccc-f369-b48b3ee9ea03"
       },
       "source": [
         "car_data.columns"
       ],
-      "execution_count": 73,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -469,7 +469,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 73
+          "execution_count": 121
         }
       ]
     },
@@ -483,7 +483,7 @@
       "source": [
         "car_data.rename(columns={'Engine HP':'HP','Engine Cylinders':'Cylinders','Transmission Type':'Transmission','Driven_Wheels':'Drive Mode','highway MPG':'MPG-H','city mpg':'MPG-C','MSRP':'MRP'},inplace = True)"
       ],
-      "execution_count": 74,
+      "execution_count": 122,
       "outputs": []
     },
     {
@@ -495,12 +495,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 84
         },
-        "outputId": "632fe8df-22b3-4f34-efbb-b5679f5a88a3"
+        "outputId": "ca28e9fe-4d02-46c5-aacb-33e3f8d0377b"
       },
       "source": [
         "car_data.columns"
       ],
-      "execution_count": 75,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -515,7 +515,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 75
+          "execution_count": 123
         }
       ]
     },
@@ -529,7 +529,7 @@
       "source": [
         "df = pd.DataFrame(car_data) "
       ],
-      "execution_count": 76,
+      "execution_count": 124,
       "outputs": []
     },
     {
@@ -541,12 +541,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 469
         },
-        "outputId": "1f77828e-7542-4754-f692-f81d48e032da"
+        "outputId": "3ceb78a9-b8e5-482e-ba5f-da0cc5c1214c"
       },
       "source": [
         "df.drop(['Market Category'],axis = 1)"
       ],
-      "execution_count": 77,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -811,7 +811,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 77
+          "execution_count": 125
         }
       ]
     },
@@ -824,12 +824,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 84
         },
-        "outputId": "ca036e9a-67dc-45ed-8b2c-cedd84520f9a"
+        "outputId": "c8db2fb8-2722-40d4-ff3d-652c47a288ca"
       },
       "source": [
         "df.columns\n"
       ],
-      "execution_count": 78,
+      "execution_count": 126,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -844,7 +844,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 78
+          "execution_count": 126
         }
       ]
     },
@@ -858,24 +858,24 @@
       "source": [
         "car_data = car_data.dropna()"
       ],
-      "execution_count": 79,
+      "execution_count": 127,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iQXZK2mf_FL9",
+        "id": "imwOpj0nEWUH",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 101
         },
-        "outputId": "b86f9850-b033-4beb-8930-ba9b3884c05d"
+        "outputId": "8c457b06-3478-4c8d-e48e-335b5ac281ef"
       },
       "source": [
-        "car_data.drop_duplicates(subset=None, inplace=True)"
+        "car_data.drop_duplicates(subset=None, inplace=True)\n"
       ],
-      "execution_count": 80,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "stream",
@@ -899,12 +899,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 403
         },
-        "outputId": "34fab693-4c07-4153-a6d1-2586f9df4b4c"
+        "outputId": "58407665-1843-4a78-e878-d31c4042906c"
       },
       "source": [
         "car_data.info()"
       ],
-      "execution_count": 81,
+      "execution_count": 129,
       "outputs": [
         {
           "output_type": "stream",
@@ -946,33 +946,33 @@
           "base_uri": "https://localhost:8080/",
           "height": 775
         },
-        "outputId": "71dc3d21-e35f-4e34-f013-29630edaad54"
+        "outputId": "e74612cd-4c37-49e6-9cdb-7580497c1531"
       },
       "source": [
         "car_data.hist(bins=30, figsize=(15, 10))"
       ],
-      "execution_count": 87,
+      "execution_count": 130,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f888d403cf8>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f888c6e90b8>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f888c7153c8>],\n",
-              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f888c6c4748>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f888c672ac8>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f888c6a3e48>],\n",
-              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f888c65d208>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f888c60b550>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f888c60b5c0>]],\n",
+              "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f888bd80eb8>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f888bf30208>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f888c16d550>],\n",
+              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f888c0f98d0>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f888c0e8c50>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f888c156fd0>],\n",
+              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f888c0cf390>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f888bfbd6d8>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f888bfbd748>]],\n",
               "      dtype=object)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 87
+          "execution_count": 130
         },
         {
           "output_type": "display_data",
@@ -992,15 +992,67 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DzV6cJMFBkxi",
+        "id": "5qFLzfzNC5qi",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 77
+        },
+        "outputId": "d369a646-157e-4ce8-e2ba-0ce3021f2ac4"
       },
       "source": [
-        ""
+        "car_data = car_data [['Make','MRP']][car_data.MRP==df['MRP'].max()]\n",
+        "car_data"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 131,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Make</th>\n",
+              "      <th>MRP</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>11362</th>\n",
+              "      <td>Bugatti</td>\n",
+              "      <td>2065902</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "          Make      MRP\n",
+              "11362  Bugatti  2065902"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 131
+        }
+      ]
     }
   ]
 }
