--- a/ML_Internship_Project(B).ipynb
+++ b/ML_Internship_Project(B).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ML Internship Project(B).ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPLt1fGkHCACuYE6BP6Hhfg",
+      "authorship_tag": "ABX9TyNqmru0lPQUY6mnZLF0bhKx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1789,7 +1789,7 @@
       },
       "source": [
         "#Removing Outliners\n",
-        "ample_data = sample_data[~((sample_data < (Q1 - 1.5 * IQR)) |(sample_data > (Q2 + 1.5 * IQR))).any(axis=1)]"
+        "sample_data = sample_data[~((sample_data < (Q1 - 1.5 * IQR)) |(sample_data > (Q2 + 1.5 * IQR))).any(axis=1)]"
       ],
       "execution_count": 54,
       "outputs": []
